<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_master_list"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextMasterTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/add_a_task_to_master_list"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCloseMaster"
                android:layout_width="wrap_content"
                android:text="@string/close"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonAddTaskMaster"
                android:layout_width="wrap_content"
                android:text="@string/add_task"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>